# svelte-rust-static-site-template

./: .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
src/routes/: +page.svelte
{{project-name}}/: Cargo.toml  modulize.js
{{project-name}}/src/: lib.rs
